# booktyping

./: Cargo.toml  README.md  usage-example.webm
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  ui.rs
